maalstroom/resources/style.css
/* ... */
/*Styles for Message list*/

table {
    border-collapse: collapse;
    background-color: #ffffff;
    border-spacing: 0;
}
.subject {
  overflow: hidden;
  text-overflow: ellipsis;  // IE 6+, FF 7+, Op 11+, Saf 1.3+, Chr 1+
  -o-text-overflow: ellipsis;  // for Opera 9 & 10
  display: block;
  white-space: nowrap;
}
.table-head {
   background-color: #d2d4d9;
   font-size: .8em;
}
.table-head:hover {
   background-color: #d2d4d9;
   color: #000000;
}
.new-mail-icon {
   background: url("images/unread.png") no-repeat center center;
   height: 12px;
   width: 12px;
}
.mail-icon {
   background: url("images/read.png") no-repeat center center;
   height: 12px;
   width: 12px;
}
.reply-icon {
   background: url("images/reply_icon.png") no-repeat center center;
   height: 13px;
   width: 15px;
}
.trash-icon {
   background: url("images/trash_icon.png") no-repeat center center;
   height: 13px;
   width: 11px;
}
.reply-icon-new {
   background: url("images/reply_icon_new.png") no-repeat center center;
   height: 13px;
   width: 15px;
}
.trash-icon-new {
   background: url("images/trash_icon_new.png") no-repeat center center;
   height: 13px;
   width: 11px;
}
.new-mail {
   background-color: #badfe3;
   border-bottom: 1px solid #e5e5e5;
   font-weight: bold;
   color: #141c30;
}
.change-address-button {
   height: 31px;
   background: url("images/gradient.jpg") top left repeat-x;
   float: right;
   line-height: 31px;
   text-align: center;
   padding-left: 1em;
   padding-right: 1em;
   margin-top: 1em;
   border-radius: .5em;
   -moz-box-shadow: inset 1px 1px 1px #e6e6e6;
   -webkit-box-shadow: inset 1px 1px 1px #e6e6e6;
   box-shadow: inset 1px 1px 1px #e6e6e6;
   border: 1px solid #bcbec2;
   white-space: nowrap;
}
.change-address-button:hover {
   background: #bcbec3;
   -moz-box-shadow: inset 1px 1px 1px #aaabaf;
   -webkit-box-shadow: inset 1px 1px 1px #aaabaf;
   box-shadow: inset 1px 1px 1px #aaabaf;
   border: 1px solid #999999;
}
td {
    max-width: 10em;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    border-bottom: 1px solid #e5e5e5;
}
tr {
  border-spacing: 0;
}
tr:hover, tr:hover a {
  background-color: #38a3af;
  color: #ffffff;
}
.inbox-head {
  font: 3em "Open Sans Light", sans-serif;
}
.inbox-pad {
  padding: .3em;
}
.inline {
    display: inline-blocblock;
}
.hidden {
    visibility: hidden;
}
.display_none {
    display: none;
}
a.normal:visited, a.normal:link {
    color: blue;
    text-color: blue;
}

/*NEW STYLES*/

/*Styles for Compose*/

.compose-bkg {
    background: #ffffff;
    height: calc(100% - 8em);
    border: 1px dashed;
}
.from-address {
    width: 80%;
    overflow: hidden;
    text-overflow: ellipsis;  // IE 6+, FF 7+, Op 11+, Saf 1.3+, Chr 1+
    -o-text-overflow: ellipsis;  // for Opera 9 & 10
    white-space: nowrap;
    padding: 0;
    margin: 0;
}
.message label {
    float: left;
    text-align: left;
    width: 6em;
    padding-top: .3em;
    margin-left: 2em;
    font-size: .9em;
    letter-spacing: 0;
    color: #666666;
}
.message input {
    height:2em;
    width: 70%;
    min-width: 20em;
}
.message textarea {
    padding:8px;
    width: 100%;
    height: 100%;
    margin-top: 1em;
    border: 0px none;
    border-radius: 0px;
    padding: 8px 0px 8px 8px;
    resize: none;
    font-family: monospace;
    font-size: 1.2em;
    outline: medium none;
    box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2) inset;
}
input[type="text"]:focus, textarea:focus {
    outline: medium none;
    border-color: #39a3af;
    box-shadow: 0px 0px 5px 2px rgba(56, 163, 175, 0.9);
}
.message input {
    border: 1px solid #b2b2b2;
    box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.1) inset;
    border-radius: 4px;
    font-size: .85em;
}
.message li {
    padding-top: 1em;
    white-space: nowrap;
}
button.submit {
    margin-left: 1em;
    margin-top: 0.5em;
    background-color: #b025be;
    background: -webkit-gradient(linear, left top, left bottom, from(#b025be), to(#7e1d81));
    background: -webkit-linear-gradient(top, #b025be, #7e1d81);
    background: -moz-linear-gradient(top, #b025be, #7e1d81);
    background: -ms-linear-gradient(top, #b025be, #7e1d81);
    background: -o-linear-gradient(top, #b025be, #7e1d81);
    background: linear-gradient(top, #b025be, #7e1d81);
    border: 1px solid #b025be;
    border-bottom: 1px solid #b025be;
    border-radius: .5em;
    -webkit-border-radius: .5em;
    -moz-border-radius: .5em;
    -ms-border-radius: .5em;
    -o-border-radius: .5em;
    box-shadow: inset 0 1px 0 0 #7e1d81;
    -webkit-box-shadow: 0 1px 0 0 #7e1d81 inset ;
    -moz-box-shadow: 0 1px 0 0 #7e1d81 inset;
    -ms-box-shadow: 0 1px 0 0 #7e1d81 inset;
    -o-box-shadow: 0 1px 0 0 #7e1d81 inset;
    color: white;
    padding: 4px 20px;
    text-align: center;
    text-shadow: 0 -1px 0 background-color:;
}
button.submit:hover {
    background: #7e1d81;
    cursor: pointer;
}
button.submit:active {
    border: 1px solid #7e1d81;
    box-shadow: 0 0 10px 5px #6f1772 inset;
    -webkit-box-shadow:0 0 10px 5px #6f1772 inset ;
    -moz-box-shadow: 0 0 10px 5px #6f1772 inset;
    -ms-box-shadow: 0 0 10px 5px #6f1772 inset;
    -o-box-shadow: 0 0 10px 5px #6f1772 inset;
}
 button.addressbook-icon {
    background: url("images/addressbook_grey.png") no-repeat left center;
    cursor: pointer;
    height: 19px;
    width: 19px;
    border: 0;
    float: left;
    position: absolute;
    display: inline-block;
}
 button.addressbook-icon:hover {
    background: url("images/addressbook_blue.png") no-repeat left center;
}
.dynamicWidth {
    margin-right: 2em;
}
.staticWidth {
    position: absolute;
    right: 1em;
    width: 30px;
    top: 6.7em;
/*    top: 10.8em; /*centers the content of this div in middle of height*/
}
.address-trunc {
    overflow: hidden;
    text-overflow: ellipsis;  // IE 6+, FF 7+, Op 11+, Saf 1.3+, Chr 1+
    -o-text-overflow: ellipsis;  // for Opera 9 & 10
    white-space: nowrap;
    padding: 0;
    margin: 0;
}
/* ... */

